[package]
name = "rustic-garden"
version = "0.1.0"
authors = ["rcrobert"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.5"
signal-hook = "0.1.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.4"
